# organiza

./: .buildconfig  .editorconfig  .gitignore  .travis.yml  README.md  main.go  meson.build
.builds/: arch.yml
.circleci/: config.yml
data/: meson.build  org.organiza.Organiza.appdata.xml.in  org.organiza.Organiza.desktop.in  org.organiza.Organiza.gschema.xml
internal/: organzia.go
internal/files/: fileutil.go
internal/gui/: filepane.go  iconmanager.go
po/: POTFILES  de.po  en.po  meson.build
src/: filepane.ui  filepane.vala  filepanecontainer.ui  filepanecontainer.vala  iconmanager.vala  key-bindings.css  main.vala  meson.build  organiza.gresource.xml  terminal.vala  window.ui  window.vala
src/files/: fileutil.vala  fileutiltest.vala
src/gui/: iconmanager.vala
tests/: fileutiltest.vala  meson.build
